Update build and resource scripts for JavaFX 11